--- a/_pgbackup/css/bootstrap.min_1623904861.css
+++ b/_pgbackup/css/bootstrap.min_1623904861.css
@@ -38,7 +38,7 @@
 ::after,
 ::before {
     box-sizing: border-box;
-    padding-bottom: 1px;
+    margin-bottom: 0px;
 }
 
 html {
@@ -99,6 +99,8 @@ h6 {
 }
 
 p {
+    margin-top: 0;
+    margin-bottom: 1rem;
     font-size: 18px;
 }
 
@@ -582,8 +584,7 @@ pre code {
     width: 100%;
     margin-right: auto;
     margin-left: auto;
-    padding-left: 15px;
-    padding-right: 15px;
+    padding: 0px 15px;
 }
 
 @media (min-width:576px){
