--- a/_pgbackup/css/bootstrap.min_1623948883.css
+++ b/_pgbackup/css/bootstrap.min_1623948883.css
@@ -38,7 +38,7 @@
 ::after,
 ::before {
     box-sizing: border-box;
-    padding-bottom: 1px;
+    margin-bottom: 0px;
 }
 
 html {
@@ -99,6 +99,8 @@ h6 {
 }
 
 p {
+    margin-top: 0;
+    margin-bottom: 1rem;
     font-size: 18px;
 }
 
