--- a/_pgbackup/css/style_1625111855.css
+++ b/_pgbackup/css/style_1625111855.css
@@ -84,6 +84,7 @@ ul li {
 .img-shadow {
     -webkit-box-shadow: 0px 30px 64px 16px rgba(129, 116, 254, 0.15);
     box-shadow: 0px 30px 64px 16px rgba(77, 77, 77, 0.28);
+    z-index: -2;
 }
 
 .awards {
@@ -686,6 +687,7 @@ floating
     padding: 30px;
     text-align: center;
     margin-top: 35px;
+    z-index: 1;
 }
 
 .service-item i {
@@ -1768,7 +1770,7 @@ floating
             Footer
 *************************** */
 .site-footer {
-    margin-top: 130px;
+    margin-top: 195px;
     padding-top: 190px;
     background: url('../images/footer-shape.png');
     background-position: center;
@@ -1790,7 +1792,7 @@ floating
 .site-footer .footer-copyright {
     text-align: center;
     color: #fff;
-    padding: 25px 0 10px;
+    padding: 25px 0 20px;
 }
 
 .site-footer-2 {
@@ -2528,11 +2530,12 @@ floating
     font-size: 15px;
     line-height: 19px;
     font-weight: 400;
-    margin: 0px 0px 35px;
     transform: scale(1.1);
     letter-spacing: 0.5em;
     transition: 0.4s;
     opacity: 0;
+    padding-top: 0px;
+    margin: 16px 0px 114px;
 }
 
 .team-overlay h4 span {
@@ -2610,7 +2613,10 @@ floating
     left: 0px;
     right: 0px;
     width: 100%;
-    padding: 0px 40px;
+    padding-left: 40px;
+    padding-right: 40px;
+    padding-bottom: 0px;
+    top: 296px;
 }
 
 .carousel-dots .owl-controls {
@@ -12326,7 +12332,7 @@ IMG_BRAND {
 
 .blob3 {
     left: 1768px;
-    z-index: -4;
+    z-index: -16;
     display: inline;
     overflow: scroll;
     position: absolute;
@@ -12381,7 +12387,7 @@ IMG_BRAND {
 
 .class2 {
     height: 100%;
-    z-index: -3;
+    z-index: -6;
 }
 
 .spce2 {
@@ -12456,38 +12462,20 @@ IMG_BRAND {
 
 .gif {
     padding-top: 101px;
+    box-shadow: 0px 0px;
 }
 
 .modal {
     display: none;
-
-    /* Hidden by default */
     position: fixed;
-
-    /* Stay in place */
-    z-index: 30;
-
-    /* Sit on top */
+    z-index: 1000;
     padding-top: 200px;
-
-    /* Location of the box */
     left: 0;
     top: 0;
     width: 100%;
-
-    /* Full width */
     height: 100%;
-
-    /* Full height */
-    overflow: auto;
-
-    /* Enable scroll if needed */
-    background-color: rgb(0,0,0);
-
-    /* Fallback color */
-    background-color: rgba(0,0,0,0.4);
-
-    /* Black w/ opacity */
+    background-color: rgba(81, 81, 81, 0.49);
+    overflow-y: hidden;
 }
 
 /* Modal Content */
@@ -12497,7 +12485,6 @@ IMG_BRAND {
     padding: 20px;
     border: 4px solid #888;
     width: 40%;
-    z-index: 30;
     overflow: hidden;
     display: flex;
 }
@@ -12565,4 +12552,8 @@ IMG_BRAND {
     equipo {
         height: 66px;
     }
+}
+
+.zin {
+    z-index: -3;
 }
