--- a/css/style.css
+++ b/css/style.css
@@ -203,16 +203,14 @@ ul li {
 }
 
 .banner .bnr-shape-img-2 {
-    position: absolute;
-    width: 55%;
-    height: 51%;
-    top: 0;
-    right: 0;
+    position: relative;
+    width: 42%;
+    height: 71%;
     background-repeat: no-repeat;
     background-size: cover;
-    padding-bottom: 0px;
-    margin-top: 183px;
-    padding-left: 0px;
+    display: inline;
+    left: 364px;
+    top: -1599px;
 }
 
 .banner h1 {
@@ -2367,8 +2365,7 @@ floating
 
 .team-overlay h4 {
     color: #FFF;
-    font-size: 15px;
-    line-height: 19px;
+    font-size: 5px;
     font-weight: 400;
     margin: 0px 0px 35px;
     transform: scale(1.1);
@@ -2446,7 +2443,7 @@ floating
 
 .team-overlay-inner {
     position: absolute;
-    bottom: 46px;
+    bottom: 80px;
     left: 0px;
     right: 0px;
     width: 100%;
@@ -2527,14 +2524,14 @@ floating
 
 .team-overlay h4 {
     color: #FFF;
-    font-size: 15px;
-    line-height: 19px;
     font-weight: 400;
-    margin: 0px 0px 35px;
     transform: scale(1.1);
     letter-spacing: 0.5em;
     transition: 0.4s;
     opacity: 0;
+    padding-top: 0px;
+    margin: 16px 0px 114px;
+    font-family: 'Mulish', sans-serif;
 }
 
 .team-overlay h4 span {
@@ -2608,11 +2605,11 @@ floating
 }
 
 .team-overlay-inner {
-    position: fixed;
+    position: static;
     left: 0px;
     right: 0px;
     width: 100%;
-    padding: 0px 40px;
+    padding: 50% 20px 0px;
 }
 
 .carousel-dots .owl-controls {
@@ -7728,18 +7725,11 @@ img.mfp-img {
 /* *  Core Owl Carousel CSS File */
 .owl-carousel {
     display: none;
-    width: 100%;
     -webkit-tap-highlight-color: transparent;
 
     /* position relative and z-index fix webkit rendering fonts issue */
     position: relative;
     z-index: 1;
-    height: 588px;
-    margin-top: -;
-    padding-top: 0px;
-    padding-bottom: 0px;
-    margin-bottom: 45px;
-    top: -;
 }
 
 .owl-carousel .owl-stage {
@@ -7777,7 +7767,8 @@ img.mfp-img {
 }
 
 .owl-carousel.owl-loaded {
-    display: flex;
+    display: inline;
+    height: 100%;
 }
 
 .owl-carousel.owl-loading {
@@ -7787,6 +7778,7 @@ img.mfp-img {
 
 .owl-carousel.owl-hidden {
     opacity: 0;
+    height: 100%;
 }
 
 .owl-carousel .owl-refresh .owl-item {
@@ -12190,12 +12182,17 @@ IMG_BRAND {
 
 .team_img {
     padding-top: 40px;
+    font-family: 'Mulish', sans-serif;
+    font-size: 1px;
 }
 
 .team_img {
 }
 
 .team_img {
+}
+
+align-content: {
 }
 
 .team_img {
@@ -12303,15 +12300,12 @@ IMG_BRAND {
 }
 
 .blob1 {
-    width: 761px;
-    height: 1000px;
+    height: 857px;
     z-index: -10;
     position: relative;
     margin-bottom: 0;
     margin-left: 0px;
-    left: 181px;
-    display: inline;
-    top: -927px;
+    top: -;
 }
 
 .blob2 {
@@ -12338,10 +12332,10 @@ IMG_BRAND {
 .imghero {
     z-index: -1;
     position: relative;
-    left: 110px;
     display: inline-table;
     vertical-align: inherit;
-    top: -61px;
+    top: 860px;
+    left: 162px;
 }
 
 .spacecon {
@@ -12350,7 +12344,7 @@ IMG_BRAND {
 
 .col-xs-12 {
     padding-bottom: 0px;
-    height: 644px;
+    height: 100%;
 }
 
 .newclass {
@@ -12358,7 +12352,7 @@ IMG_BRAND {
 }
 
 .center-block {
-    display: inline-flex;
+    display: inline;
 }
 
 .hello {
@@ -12552,4 +12546,117 @@ IMG_BRAND {
 
 .zin {
     z-index: -3;
+}
+
+@media screen and (min-width:2864px) {
+    .4k {
+        position: relative;
+        bottom: -96px;
+    }
+
+    .4k {
+        position: fixed;
+        left: 1202px;
+        top: -466px;
+    }
+
+    .4k {
+        width: -1px;
+    }
+}
+
+@media screen and (max-width:1199px) {
+    .img1200 {
+        width: 57%;
+        position: relative;
+        top: 957px;
+    }
+
+    .blob1200 {
+        height: 565px;
+        position: relative;
+        top: 408px;
+        left: 181px;
+        width: 498px;
+    }
+}
+
+@media screen and (min-width:2864px) {
+    .blob4k2 {
+        height: 2136px;
+        z-index: -14;
+        left: -1756px;
+        top: 1550px;
+        position: absolute;
+        margin-bottom: -1337px;
+        display: inline;
+        float: left;
+    }
+
+    .blob34k {
+        left: 2884px;
+        z-index: -16;
+        display: inline;
+        overflow: scroll;
+        position: absolute;
+        margin-top: -290px;
+        top: 3000px;
+        height: 1677px;
+    }
+
+    .blob34k6 {
+        left: 2884px;
+        z-index: -16;
+        display: inline;
+        overflow: scroll;
+        position: absolute;
+        margin-top: -290px;
+        top: 6000px;
+        height: 1677px;
+    }
+
+    .owl-carousel4k {
+        display: none;
+        -webkit-tap-highlight-color: transparent;
+
+        /* position relative and z-index fix webkit rendering fonts issue */
+        position: relative;
+        z-index: 1;
+    }
+}
+
+.screenshot {
+}
+
+@media screen and (max-width:1199px) {
+    .hello12 {
+        height: 238px;
+        position: relative;
+        top: 124px;
+    }
+
+    .hello123 {
+        height: 238px;
+        position: relative;
+        top: 180px;
+    }
+}
+
+.hello92 {
+}
+
+@media screen and (max-width:991px) {
+    .hello92 {
+        width: 100%;
+        position: relative;
+        top: 69px;
+        left: 168px;
+    }
+
+    .hello923 {
+        width: 100%;
+        position: relative;
+        top: 69px;
+        left: 298px;
+    }
 }
