--- a/_pgbackup/css/style_1625580687.css
+++ b/_pgbackup/css/style_1625580687.css
@@ -84,6 +84,7 @@ ul li {
 .img-shadow {
     -webkit-box-shadow: 0px 30px 64px 16px rgba(129, 116, 254, 0.15);
     box-shadow: 0px 30px 64px 16px rgba(77, 77, 77, 0.28);
+    z-index: -2;
 }
 
 .awards {
@@ -202,16 +203,14 @@ ul li {
 }
 
 .banner .bnr-shape-img-2 {
-    position: absolute;
-    width: 55%;
-    height: 51%;
-    top: 0;
-    right: 0;
+    position: relative;
+    width: 42%;
+    height: 71%;
     background-repeat: no-repeat;
     background-size: cover;
-    padding-bottom: 0px;
-    margin-top: 183px;
-    padding-left: 0px;
+    display: inline;
+    left: 364px;
+    top: -1599px;
 }
 
 .banner h1 {
@@ -686,7 +685,7 @@ floating
     padding: 30px;
     text-align: center;
     margin-top: 35px;
-    z-index: -1;
+    z-index: 1;
 }
 
 .service-item i {
@@ -1769,9 +1768,8 @@ floating
             Footer
 *************************** */
 .site-footer {
-    margin-top: 130px;
+    margin-top: 195px;
     padding-top: 190px;
-    background: url('../images/footer-shape.png');
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -1791,7 +1789,7 @@ floating
 .site-footer .footer-copyright {
     text-align: center;
     color: #fff;
-    padding: 25px 0 10px;
+    padding: 25px 0 20px;
 }
 
 .site-footer-2 {
@@ -2366,8 +2364,7 @@ floating
 
 .team-overlay h4 {
     color: #FFF;
-    font-size: 15px;
-    line-height: 19px;
+    font-size: 5px;
     font-weight: 400;
     margin: 0px 0px 35px;
     transform: scale(1.1);
@@ -2445,7 +2442,7 @@ floating
 
 .team-overlay-inner {
     position: absolute;
-    bottom: 46px;
+    bottom: 80px;
     left: 0px;
     right: 0px;
     width: 100%;
@@ -2526,14 +2523,14 @@ floating
 
 .team-overlay h4 {
     color: #FFF;
-    font-size: 15px;
-    line-height: 19px;
     font-weight: 400;
-    margin: 0px 0px 35px;
     transform: scale(1.1);
     letter-spacing: 0.5em;
     transition: 0.4s;
     opacity: 0;
+    padding-top: 0px;
+    margin: 16px 0px 114px;
+    font-family: 'Mulish', sans-serif;
 }
 
 .team-overlay h4 span {
@@ -2607,11 +2604,11 @@ floating
 }
 
 .team-overlay-inner {
-    position: fixed;
+    position: static;
     left: 0px;
     right: 0px;
     width: 100%;
-    padding: 0px 40px;
+    padding: 50% 20px 0px;
 }
 
 .carousel-dots .owl-controls {
@@ -7727,18 +7724,11 @@ img.mfp-img {
 /* *  Core Owl Carousel CSS File */
 .owl-carousel {
     display: none;
-    width: 100%;
     -webkit-tap-highlight-color: transparent;
 
     /* position relative and z-index fix webkit rendering fonts issue */
     position: relative;
     z-index: 1;
-    height: 588px;
-    margin-top: -;
-    padding-top: 0px;
-    padding-bottom: 0px;
-    margin-bottom: 45px;
-    top: -;
 }
 
 .owl-carousel .owl-stage {
@@ -7776,7 +7766,8 @@ img.mfp-img {
 }
 
 .owl-carousel.owl-loaded {
-    display: flex;
+    display: inline;
+    height: 100%;
 }
 
 .owl-carousel.owl-loading {
@@ -7786,6 +7777,7 @@ img.mfp-img {
 
 .owl-carousel.owl-hidden {
     opacity: 0;
+    height: 100%;
 }
 
 .owl-carousel .owl-refresh .owl-item {
@@ -12189,12 +12181,17 @@ IMG_BRAND {
 
 .team_img {
     padding-top: 40px;
+    font-family: 'Mulish', sans-serif;
+    font-size: 1px;
 }
 
 .team_img {
 }
 
 .team_img {
+}
+
+align-content: {
 }
 
 .team_img {
@@ -12302,15 +12299,12 @@ IMG_BRAND {
 }
 
 .blob1 {
-    width: 761px;
-    height: 1000px;
+    height: 857px;
     z-index: -10;
     position: relative;
     margin-bottom: 0;
     margin-left: 0px;
-    left: 181px;
-    display: inline;
-    top: -927px;
+    top: -;
 }
 
 .blob2 {
@@ -12337,10 +12331,10 @@ IMG_BRAND {
 .imghero {
     z-index: -1;
     position: relative;
-    left: 110px;
     display: inline-table;
     vertical-align: inherit;
-    top: -61px;
+    top: 860px;
+    left: 162px;
 }
 
 .spacecon {
@@ -12349,7 +12343,7 @@ IMG_BRAND {
 
 .col-xs-12 {
     padding-bottom: 0px;
-    height: 644px;
+    height: 100%;
 }
 
 .newclass {
@@ -12357,7 +12351,7 @@ IMG_BRAND {
 }
 
 .center-block {
-    display: inline-flex;
+    display: inline;
 }
 
 .hello {
@@ -12411,17 +12405,18 @@ IMG_BRAND {
 }
 
 .Foot {
-    padding-top: 90px;
-    padding-bottom: 55px;
     text-align: center;
-    display: inline-flex;
-    width: 100%;
+    display: flex;
+    width: 90%;
+    position: relative;
+    left: 5%;
+    top: -42px;
 }
 
 .dicio {
     position: relative;
     min-height: 1px;
-    padding-left: 10%;
+    padding-left: 4%;
     width: 30%;
     font-family: 'Mulish', sans-serif;
     color: #ffffff;
@@ -12457,19 +12452,20 @@ IMG_BRAND {
 
 .gif {
     padding-top: 101px;
+    box-shadow: 0px 0px;
 }
 
 .modal {
     display: none;
     position: fixed;
-    z-index: 10;
+    z-index: 1000;
     padding-top: 200px;
     left: 0;
     top: 0;
     width: 100%;
     height: 100%;
     background-color: rgba(81, 81, 81, 0.49);
-    overflow-x: hidden;
+    overflow-y: hidden;
 }
 
 /* Modal Content */
@@ -12479,7 +12475,6 @@ IMG_BRAND {
     padding: 20px;
     border: 4px solid #888;
     width: 40%;
-    z-index: 30;
     overflow: hidden;
     display: flex;
 }
@@ -12551,4 +12546,207 @@ IMG_BRAND {
 
 .zin {
     z-index: -3;
+}
+
+@media screen and (min-width:2864px) {
+    .4k {
+        position: relative;
+        bottom: -96px;
+    }
+
+    .4k {
+        position: fixed;
+        left: 1202px;
+        top: -466px;
+    }
+
+    .4k {
+        width: -1px;
+    }
+}
+
+@media screen and (max-width:1199px) {
+    .img1200 {
+        width: 57%;
+        position: relative;
+        top: 957px;
+    }
+
+    .blob1200 {
+        height: 565px;
+        position: relative;
+        top: 408px;
+        left: 181px;
+        width: 498px;
+    }
+}
+
+@media screen and (min-width:2864px) {
+    .blob4k2 {
+        height: 2136px;
+        z-index: -14;
+        left: -1756px;
+        top: 1550px;
+        position: absolute;
+        margin-bottom: -1337px;
+        display: inline;
+        float: left;
+    }
+
+    .blob34k {
+        left: 2884px;
+        z-index: -16;
+        display: inline;
+        overflow: scroll;
+        position: absolute;
+        margin-top: -290px;
+        top: 3000px;
+        height: 1677px;
+    }
+
+    .blob34k6 {
+        left: 2884px;
+        z-index: -16;
+        display: inline;
+        overflow: scroll;
+        position: absolute;
+        margin-top: -290px;
+        top: 6000px;
+        height: 1677px;
+    }
+
+    .owl-carousel4k {
+        display: none;
+        -webkit-tap-highlight-color: transparent;
+
+        /* position relative and z-index fix webkit rendering fonts issue */
+        position: relative;
+        z-index: 1;
+    }
+}
+
+.screenshot {
+}
+
+@media screen and (max-width:1199px) {
+    .hello12 {
+        height: 238px;
+        position: relative;
+        top: 124px;
+    }
+
+    .hello123 {
+        height: 238px;
+        position: relative;
+        top: 180px;
+    }
+}
+
+.hello92 {
+}
+
+@media screen and (max-width:991px) {
+    .hello92 {
+        width: 100%;
+        position: relative;
+        top: 69px;
+        left: 168px;
+    }
+
+    .hello923 {
+        width: 100%;
+        position: relative;
+        top: 69px;
+        left: 298px;
+    }
+}
+
+.logofoot {
+    height: 100%;
+    position: relative;
+    top: -91px;
+    margin-left: 50%;
+    margin-right: 50%;
+}
+
+section .anim {
+    position: relative;
+    width: 100%;
+    height: 100vh;
+    background: ;
+    overflow: hidden;
+}
+
+section .wave {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 100px;
+    background-size: 1000px 100px;
+    background-image: url('../images/wave.png');
+}
+
+section .wave.wave1 {
+    animation: animate 30s linear infinite;
+    z-index: 1000;
+    opacity: 1;
+    animation-delay: 0s;
+    bottom: 0;
+}
+
+section .wave.wave2 {
+    animation: animate2 15s linear infinite;
+    z-index: 999;
+    opacity: 0.5;
+    animation-delay: -5s;
+    bottom: 10px;
+}
+
+section .wave.wave3 {
+    animation: animate 30s linear infinite;
+    z-index: 998;
+    opacity: 0.2;
+    animation-delay: -2s;
+    bottom: 15px;
+}
+
+section .wave.wave4 {
+    animation: animate2 5s linear infinite;
+    z-index: 997;
+    opacity: 0.7;
+    animation-delay: -2s;
+    bottom: 20px;
+}
+
+@keyframes animate
+{
+    0% {
+        background-position-x: 0;
+    }
+
+    100% {
+        background-position-x: 1000px;
+    }
+}
+
+@keyframes animate2
+{
+    0% {
+        background-position-x: 0;
+    }
+
+    100% {
+        background-position-x: 1000px;
+    }
+}
+
+.anim {
+    position: relative;
+    top: -240px;
+}
+
+.imgfo {
+    position: relative;
+    right: 160px;
 }
