--- a/_pgbackup/css/bootstrap.min_1625586876.css
+++ b/_pgbackup/css/bootstrap.min_1625586876.css
@@ -39,6 +39,7 @@
 ::before {
     box-sizing: border-box;
     padding-bottom: 1px;
+    z-index: auto;
 }
 
 html {
@@ -512,6 +513,7 @@ mark {
 .img-fluid {
     max-width: 100%;
     height: auto;
+    z-index: 0;
 }
 
 .img-thumbnail {
@@ -714,6 +716,7 @@ pre code {
     min-height: 1px;
     padding-right: 15px;
     padding-left: 15px;
+    z-index: 2;
 }
 
 .col {
@@ -5797,14 +5800,11 @@ button.close {
     overflow-y: auto;
 }
 
-.modal {
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
-    z-index: 1;
-    display: none;
-    overflow: hidden;
+.modal-dialog {
+    position: relative;
+    width: auto;
+    margin: .5rem;
+    pointer-events: none;
 }
 
 .modal.fade .modal-dialog {
@@ -6280,6 +6280,7 @@ button.close {
 
 .carousel {
     position: relative;
+    height: 100%;
 }
 
 .carousel-inner {
