--- a/_pgbackup/css/slick_1625586876.css
+++ b/_pgbackup/css/slick_1625586876.css
@@ -1,6 +1,7 @@
 /* Slider */
 .slick-slider {
     position: relative;
+    display: block;
     box-sizing: border-box;
     -webkit-user-select: none;
     -moz-user-select: none;
@@ -63,6 +64,7 @@
 }
 
 .slick-slide {
+    display: none;
     float: left;
     height: 100%;
     min-height: 1px;
@@ -73,9 +75,7 @@
 }
 
 .slick-slide img {
-    margin-left: 0 auto;
-    margin-bottom: 40px;
-    padding-top: 0px;
+    margin-bottom: 29px;
 }
 
 .slick-slide.slick-loading img {
@@ -87,8 +87,7 @@
 }
 
 .slick-initialized .slick-slide {
-    margin: 0 auto;
-    width: 100%;
+    display: block;
 }
 
 .slick-loading .slick-slide {
