--- a/_pgbackup/css/bootstrap.min_1625728566.css
+++ b/_pgbackup/css/bootstrap.min_1625728566.css
@@ -39,6 +39,8 @@
 ::before {
     box-sizing: border-box;
     padding-bottom: 1px;
+    z-index: auto;
+    margin-left: 0px;
 }
 
 html {
@@ -178,6 +180,7 @@ a {
     text-decoration: none;
     background-color: transparent;
     -webkit-text-decoration-skip: objects;
+    text-align: center;
 }
 
 a:hover {
@@ -220,7 +223,6 @@ figure {
 }
 
 img {
-    vertical-align: middle;
     border-style: none;
     z-index: 0;
 }
@@ -512,6 +514,7 @@ mark {
 .img-fluid {
     max-width: 100%;
     height: auto;
+    z-index: 0;
 }
 
 .img-thumbnail {
@@ -580,10 +583,10 @@ pre code {
 
 .container {
     width: 100%;
-    margin-right: auto;
-    margin-left: auto;
     padding-left: 15px;
     padding-right: 15px;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 @media (min-width:576px){
@@ -606,8 +609,8 @@ pre code {
 
 @media (min-width:1200px){
     .container {
-        max-width: 1228px;
-        padding-left: 57px;
+        max-width: 1140px;
+        max-height: 542px;
     }
 }
 
@@ -714,6 +717,7 @@ pre code {
     min-height: 1px;
     padding-right: 15px;
     padding-left: 15px;
+    z-index: 2;
 }
 
 .col {
@@ -1005,7 +1009,6 @@ pre code {
     }
 
     .col-sm-12 {
-        float: left;
     }
 
     .order-sm-first {
@@ -1405,7 +1408,7 @@ pre code {
     .col-lg-8 {
         -ms-flex: 0 0 66.666667%;
         flex: 0 0 66.666667%;
-        max-width: 66.666667%;
+        width: 100%;
     }
 
     .col-lg-9 {
@@ -5797,9 +5800,6 @@ button.close {
     overflow-y: auto;
 }
 
-.modal {
-}
-
 .modal-dialog {
     position: relative;
     width: auto;
@@ -6280,6 +6280,7 @@ button.close {
 
 .carousel {
     position: relative;
+    height: 100%;
 }
 
 .carousel-inner {
