--- a/css/external.css
+++ b/css/external.css
@@ -8800,7 +8800,7 @@ Copyright (c) 2015 Daniel Eden
     top: 0px;
     padding-bottom: 0px;
     width: 100%;
-    margin: 32px;
+    margin: auto;
 }
 
 .feature-panel_new {
