--- a/css/style.css
+++ b/css/style.css
@@ -139,7 +139,7 @@ ul li {
 }
 
 .navbar .navbar-toggler-icon {
-    background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 30 30' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='#fff' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 7h22M4 15h22M4 23h22'/%3E%3C/svg%3E");
+    background-image: url('../images/boton-de-menu-de-tres-lineas-horizontales.png');
 }
 
 .navbar.navcolor .navbar-toggler-icon {
@@ -12741,6 +12741,7 @@ section .wave.wave4 {
     position: relative;
     top: -240px;
     margin-bottom: -120px;
+    z-index: 1;
 }
 
 .imgfo {
@@ -12889,4 +12890,20 @@ section .wave.wave4 {
 
 .casos {
     margin: auto;
+}
+
+@media screen and (max-width:991px) {
+    .hideblobsm {
+        display: none;
+    }
+}
+
+@media screen and (max-width:767px) {
+    .diciofootsm {
+    }
+
+    .footersm {
+        font-size: 14px;
+        margin: auto 10px;
+    }
 }
